# SystemMonitor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SystemMonitor.sln  SystemMonitor.vcxproj  SystemMonitor.vcxproj.filters  imgui.ini
inc/: CpuMonitor.h  GpuMonitor.h  HardwareController.h  Logger.h  NetworkMonitor.h  ProcessesMonitor.h  RamMonitor.h  SystemMonitor.h  UiController.h
src/: CpuMonitor.cpp  GpuMonitor.cpp  HardwareController.cpp  Logger.cpp  NetworkMonitor.cpp  ProcessesMonitor.cpp  RamMonitor.cpp  SystemMonitor.cpp  UiController.cpp  main.cpp
